# clustering-customers

./: .gitignore  README.md  main.py  pyproject.toml
docs/: DBSCAN_NOISE_EXPLANATION.md  PROJECT_STRUCTURE.md
outputs/: environment.json
src/: __init__.py  clustering.py  config.py  data_generator.py  preprocessing.py  reporting.py  utils.py
